--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ flask-swagger-ui==4.11.1
 greenlet==2.0.2
 gunicorn==20.1.0
 honcho==1.1.0
-idna
+idna 
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -52,6 +52,7 @@ PyYAML==6.0.1
 referencing==0.30.2
 render==1.0.0
 requests
+rpds-py==0.10.3
 ruamel.yaml
 ruamel.yaml.clib
 six==1.16.0
