--- a/Pizza_Restaurant/requirements.txt
+++ b/Pizza_Restaurant/requirements.txt
@@ -2,17 +2,17 @@ alembic==1.8.1
 aniso8601==9.0.1
 attrs==23.1.0
 blinker==1.6.2
-boltons @ file:///home/conda/feedstock_root/build_artifacts/boltons_1677499911949/work
-Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1693583441880/work
+boltons
+Brotli
 certifi==2023.7.22
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1671179360775/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1688813409104/work
+cffi
+charset-normalizer
 click==8.1.3
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
-conda @ file:///home/conda/feedstock_root/build_artifacts/conda_1692727112122/work
-conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1691048088238/work
-conda_package_streaming @ file:///home/conda/feedstock_root/build_artifacts/conda-package-streaming_1691009212940/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography-split_1691444168825/work
+colorama
+conda
+conda-package-handling
+conda_package_streaming
+cryptography
 Faker==19.6.2
 flasgger==0.9.7.1
 Flask==2.2.2
@@ -26,42 +26,42 @@ flask-swagger-ui==4.11.1
 greenlet==2.0.2
 gunicorn==20.1.0
 honcho==1.1.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
+idna
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonify==0.5
-jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1632759296524/work
+jsonpatch
 jsonpointer==2.0
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 Mako==1.2.3
 MarkupSafe==2.1.1
 mistune==3.0.1
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1681337016113/work
-pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1693086607691/work
+packaging
+pluggy
 psycopg2-binary==2.9.4
-pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1666836642684/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1685514481738/work
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
+pycosat
+pycparser
+pyOpenSSL
+PySocks
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.4
 PyYAML==6.0.1
 referencing==0.30.2
 render==1.0.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
+requests
 rpds-py==0.10.3
-ruamel.yaml @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml_1686993888032/work
-ruamel.yaml.clib @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml.clib_1670412733608/work
+ruamel.yaml
+ruamel.yaml.clib
 six==1.16.0
 SQLAlchemy==1.4.42
 SQLAlchemy-serializer==1.4.1
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1691671248568/work
+toolz
+tqdm
 typing_extensions==4.7.1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1689789803562/work
+urllib3
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.9.0
