--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
 - type: web
   name: pizza-restaurant
   env: python
-  buildCommand: pip freeze> requirements.txt
+  buildCommand: pip install -r requirements.txt
   startCommand: gunicorn app:app
