--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
 - type: web
-  name: pizza-restaurant
+  name: 
   env: python
   buildCommand: pip install -r requirements.txt
   startCommand: gunicorn app:app
