--- a/requirements.txt
+++ b/requirements.txt
@@ -19,12 +19,14 @@ Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-Migrate==3.1.0
 Flask-RESTful==0.3.9
+flask-restx==1.1.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.2
 flask-swagger==0.2.14
 flask-swagger-ui==4.11.1
 greenlet==2.0.2
 gunicorn==20.1.0
+heroku==0.1.4
 honcho==1.1.0
 idna
 importlib-metadata==5.0.0
@@ -33,10 +35,9 @@ Jinja2==3.1.2
 jsonify==0.5
 jsonpatch
 jsonpointer==2.0
-jsonschema
-jsonschema-specifications
 Mako==1.2.3
 MarkupSafe==2.1.1
+marshmallow==3.20.1
 mistune==3.0.1
 packaging
 pluggy
@@ -49,7 +50,7 @@ python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.4
 PyYAML==6.0.1
-referencing
+referencing==0.30.2
 render==1.0.0
 requests
 ruamel.yaml
