--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
   name: PizzaRestaurant
   env: python
   buildCommand: pip install -r requirements.txt
-  startCommand: gunicorn app:app
+  startCommand: gunicorn settings:app
